<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Calc_Fragment">

    <EditText
        android:id="@+id/editTextNumberDecimal4"
        android:layout_width="291dp"
        android:layout_height="52dp"
        android:layout_marginTop="40dp"
        android:autofillHints="No"
        android:ems="10"
        android:hint="@string/arithmos_1"
        android:textColorHint="#546E7A"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor,TextContrastCheck" />

    <EditText
        android:id="@+id/editTextNumberDecimal5"
        android:layout_width="290dp"
        android:layout_height="49dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="@string/arithmos_2"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textColorHint="#546E7A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberDecimal4" />

    <Button
        android:id="@+id/buttonADD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="64dp"
        android:text="@string/prosthesis"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberDecimal5" />

    <Button
        android:id="@+id/buttonSUB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="64dp"
        android:text="@string/Afairesi"
        app:layout_constraintStart_toEndOf="@+id/buttonADD"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberDecimal5" />

    <Button
        android:id="@+id/buttonMulti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="64dp"
        android:text="@string/pollaplasiasmos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/buttonSUB"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberDecimal5" />

    <Button
        android:id="@+id/buttonDivision"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:text="@string/Diairesi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/buttonMulti"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberDecimal5" />

    <Button
        android:id="@+id/button_Dynami_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/_10_x"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonADD" />

    <Button
        android:id="@+id/button_X_stin_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/x_2"
        app:layout_constraintStart_toEndOf="@+id/button_Dynami_10"
        app:layout_constraintTop_toBottomOf="@+id/buttonSUB" />

    <Button
        android:id="@+id/button_X_Dynami_eis_Y"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="28dp"
        android:text="@string/x_y"
        app:layout_constraintStart_toEndOf="@+id/button_X_stin_2"
        app:layout_constraintTop_toBottomOf="@+id/buttonMulti" />

    <Button
        android:id="@+id/buttonLOG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/log"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toEndOf="@+id/button_X_Dynami_eis_Y"
        app:layout_constraintTop_toBottomOf="@+id/buttonDivision" />

    <Button
        android:id="@+id/buttonKlasma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="32dp"
        android:text="@string/_1_x"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_Dynami_10" />

    <Button
        android:id="@+id/buttonApolitiTImi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/x"
        app:layout_constraintStart_toEndOf="@+id/buttonKlasma"
        app:layout_constraintTop_toBottomOf="@+id/button_X_stin_2" />

    <Button
        android:id="@+id/buttonParagwntiko"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="36dp"
        android:text="@string/n"
        app:layout_constraintStart_toEndOf="@+id/buttonApolitiTImi"
        app:layout_constraintTop_toBottomOf="@+id/button_X_Dynami_eis_Y" />

    <Button
        android:id="@+id/buttonLN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/ln"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonParagwntiko"
        app:layout_constraintTop_toBottomOf="@+id/buttonLOG" />

    <Button
        android:id="@+id/buttonSQRT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="40dp"
        android:text="@string/sqrt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonApolitiTImi" />

    <Button
        android:id="@+id/buttonCLEAR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/clear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.464"
        app:layout_constraintStart_toEndOf="@+id/buttonSQRT"
        app:layout_constraintTop_toBottomOf="@+id/buttonParagwntiko" />

    <TextView
        android:id="@+id/TextResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="196dp"
        android:text=""
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.471"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonApolitiTImi" />


</androidx.constraintlayout.widget.ConstraintLayout>